--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
     <meta name="keywords" content="online mobile gaming">
     <meta name="ROBOTS" content="No,Index">
 </head>
-<h1 style="color:red">Hello World</h1>
+
 
 <body>
+    <div class="heading">
+        <u style=color:orange>
+            <h1 style="color:red">Hello World</h1>
+        </u>
+    </div>
 </body>
 
 </html>
