--- a/index.html
+++ b/index.html
@@ -4,21 +4,45 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
-    <title>DplProductions</title>
+    <title>KOM</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0">
     <link rel="stylesheet" href="">
     <script src=""></script>
     <meta name="author" content="DPL Productions">
-    <meta name="keywords" content="online mobile gaming">
-    <meta name="ROBOTS" content="No,Index">
+    <meta name="keywords" content="text based strategy game; text based 4x; text based war game">
+    <meta name="ROBOTS" content="Index, ALL">
 </head>
 
-
 <body>
-    <div class="heading">
-        <u style=color:orange>
-            <h1 style="color:red">Hello World</h1>
-        </u>
+    <div class="center text" style="text-align:center">
+        <div class="background" style="background-color:rgb(66, 61, 61)">
+            <div class="margin and padding" style="margin-left:20px; margin-right:20px; padding:20px">
+                <div class="title">
+                    <h1 style="color:Red">Knights of Magicka</h1>
+                </div>
+                <div class="journey begins">
+                    <br>
+                    <p style="color:orange">A new age is upon us all as the kingdom of Turnipvale goes into turmoil. A
+                        new king must arise a new leader for its people. Many contest the crown and ownership for this
+                        new land.there shall be a rise and fall of many noble man or woman. Can you be the one to ascend
+                        the throne and claim the seat of power
+                    </p>
+                    <br>
+                    <br>
+                </div>
+                <div class="homepage start">
+                    <a style="color:orangered" href="race.html">Click here to begin your journey</a>
+                    <br>
+                    <br>
+                </div>
+                <div class="logo1">
+                    <img src="./races/Logo/dplnorm.jpg" width="160px" height="40px" alt="logo1" />
+                </div>
+                <div class="logo">
+                    <p style="color:aquamarine">By DPL Productions (c)</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
