--- a/exercises/page-2.html
+++ b/exercises/page-2.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Tale of Two Cities</title>
+    <title>IBAT Chocolates</title>
     <meta name="description"
-        content="A basic web page containing some text from A Tale of Two Cities, a novel published in 1859 by English author Charles Dickens.">
+        content="We transform ethically-sourced organically-grown, high-quality cocoa beans into delicious chocolate.">
 </head>
 
 <body>
