--- a/index.html
+++ b/index.html
@@ -1,32 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
-    <title>DplProductions</title>
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0">
-    <link rel="stylesheet" href="">
-    <script src=""></script>
-    <meta name="author" content="DPL Productions">
-    <meta name="keywords" content="online mobile gaming">
-    <meta name="ROBOTS" content="No,Index">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>dplproductions | Home Page</title>
+    <meta name="description" content="Welcome to my website that showcases some of my digital creations.">
 </head>
 
-
 <body>
+    <div class="center text" style="text-align:center">
+        <div class="margin and padding" style="margin-left:20px; margin-right:20px; padding:20px">
+            <div class="content">
 
-    <div class="heading">
-        <div class="center text" style="text-align:center">
-            <div class="background" style="background-color:rgb(66, 61, 61)">
-                <div class="margin and padding" style="margin-left:20px; margin-right:20px; padding:20px">
-                    <u style="color:orange">
-                        <h1 style="color:red">Hello World</h1>
-                    </u>
-                </div>
-                <div class="logo">
-                    <p style="color:aquamarine">By DPL Productions (c)</p>
-                </div>
+                <u>
+                    <h1 style="color:red">Welcome</h1>
+                </u>
+                <h2 style="color:green">dplproductions</h2>
+
+                <h3 style="color:blue">Sample Web Pages</h3>
+
+                <p><a style="color:coral" href="./exercises/page-1.html">A Tale of Two Cities</a></p>
+                <p><a style="color:coral" href="./exercises/page-2.html">IBAT Chocolates</a></p>
+                <p><a style="color:coral" href="./exercises/page-3.html">Prince & Purple Rain</a></p>
+                <p><a style="color:coral" href="./exercises/page-4.html">Lorem Ipsum Text</a></p>
+
             </div>
         </div>
     </div>
