--- a/exercises/page-2.html
+++ b/exercises/page-2.html
@@ -8,40 +8,40 @@
     <title>IBAT Chocolates</title>
     <meta name="description"
         content="We transform ethically-sourced organically-grown, high-quality cocoa beans into delicious chocolate.">
+    <link rel="stylesheet" href="./assets/css/style-2.css">
 </head>
 
 <body>
-    <div class="center text" style="text-align:center">
-        <div class="margin and padding" style="margin-left:20px; margin-right:20px; padding:20px">
-            <div class="content">
-                <u>
-                    <h1>IBAT Chocolates</h1>
-                </u>
-                <h2>We transform ethically-sourced organically-grown, high-quality cocoa beans into delicious chocolate.
-                </h2>
 
-                <h3>O’Payo</h3>
-                <p>Ethically-sourced cocoa beans supplied by Ingemann Fine Cocoa. Based in Tipitapa, Nicaragua, Ingemann
-                    currently receives
-                    wet beans from 450 small holders. These farmers receive a premium of 25% on their wet beans
-                    (compared to market rate for
-                    dried beans) as well as cultivation support and collection at farm gate.</p>
+    <div class="content">
+        <u>
+            <h1>IBAT Chocolates</h1>
+        </u>
 
-                <p><b>Ingredients</b>: <i>Organic cocoa beans and organic sugar</i>.</p>
+        <h2>We transform ethically-sourced organically-grown, high-quality cocoa beans into delicious chocolate.</h2>
 
-                <h3>Nahua</h3>
-                <p>Nahua is Costa Rica's leading fine flavour cocoa producer with a social mission committed to
-                    improving the lives of the
-                    local smallholder farmers. Like our other cocoa bean suppliers, Nuhua collects wet beans at the farm
-                    gate and ferments
-                    them centrally. This takes the burden of mastering the complex fermentation process off the farmer
-                    and ensures the cocoa
-                    beans are fermented and dried to an exacting standard.</p>
+        <h3>O’Payo</h3>
+        <p>Ethically-sourced cocoa beans supplied by Ingemann Fine Cocoa. Based in Tipitapa, Nicaragua, Ingemann
+            currently receives
+            wet beans from 450 small holders. These farmers receive a premium of 25% on their wet beans
+            (compared to market rate for
+            dried beans) as well as cultivation support and collection at farm gate.</p>
 
-                <p><b>Ingredients</b>: <i>Cocoa beans and organic sugar</i>.</p>
-            </div>
-        </div>
+        <p><b>Ingredients</b>: <i>Organic cocoa beans and organic sugar</i>.</p>
+
+        <h3>Nahua</h3>
+        <p>Nahua is Costa Rica's leading fine flavour cocoa producer with a social mission committed to
+            improving the lives of the
+            local smallholder farmers. Like our other cocoa bean suppliers, Nuhua collects wet beans at the farm
+            gate and ferments
+            them centrally. This takes the burden of mastering the complex fermentation process off the farmer
+            and ensures the cocoa
+            beans are fermented and dried to an exacting standard.</p>
+
+        <p><b>Ingredients</b>: <i>Cocoa beans and organic sugar</i>.</p>
+        <p><a href="../index.html">Back to Home page</a></p>
     </div>
+
 </body>
 
 </html>
