--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dplproductions | Home Page</title>
     <meta name="description" content="Welcome to my website that showcases some of my digital creations.">
+
 </head>
 
 <body>
@@ -15,16 +16,16 @@
             <div class="content">
 
                 <u>
-                    <h1 style="color:red">Welcome</h1>
+                    <h1>Welcome</h1>
                 </u>
-                <h2 style="color:green">dplproductions</h2>
+                <h2>dplproductions</h2>
 
-                <h3 style="color:blue">Sample Web Pages</h3>
+                <h3>Sample Web Pages</h3>
 
-                <p><a style="color:coral" href="./exercises/page-1.html">A Tale of Two Cities</a></p>
-                <p><a style="color:coral" href="./exercises/page-2.html">IBAT Chocolates</a></p>
-                <p><a style="color:coral" href="./exercises/page-3.html">Prince & Purple Rain</a></p>
-                <p><a style="color:coral" href="./exercises/page-4.html">Lorem Ipsum Text</a></p>
+                <p><a href="./exercises/page-1.html">A Tale of Two Cities</a></p>
+                <p><a href="./exercises/page-2.html">IBAT Chocolates</a></p>
+                <p><a href="./exercises/page-3.html">Prince & Purple Rain</a></p>
+                <p><a href="./exercises/page-4.html">Lorem Ipsum Text</a></p>
 
             </div>
         </div>
