--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dplproductions | Home Page</title>
     <meta name="description" content="Welcome to my website that showcases some of my digital creations.">
+    <link rel="stylesheet" href="./assets/css/global-1.css">
 
 </head>
 
