--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dplproductions | Home Page</title>
-    <meta name="description" content="Welcome to my website that showcases some of my digital creations.">
+    <meta name="description"
+        content="web design and development and run a online gaming comunity casual and competitive gameplay for mobile games if there a community for it we offer a platform to build it up.">
     <link rel="stylesheet" href="./assets/css/global-1.css">
 
 </head>
@@ -17,11 +18,11 @@
             <div class="content">
 
                 <u>
-                    <h1>Welcome</h1>
+                    <h1>DPLproductions</h1>
                 </u>
-                <h2>dplproductions</h2>
+                <h2>Web Development and Designs</h2>
 
-                <h3>Sample Web Pages</h3>
+                <h3>Online Mobile Gaming</h3>
 
                 <p><a href="./exercises/page-1.html">A Tale of Two Cities</a></p>
                 <p><a href="./exercises/page-2.html">IBAT Chocolates</a></p>
