--- a/exercises/page-1.html
+++ b/exercises/page-1.html
@@ -8,22 +8,18 @@
     <title>A Tale of Two Cities</title>
     <meta name="description"
         content="A basic web page containing some text from A Tale of Two Cities, a novel published in 1859 by English author Charles Dickens.">
-    <link rel="stylesheet" href="./assets/css/style-1.css">
+    <link rel="stylesheet" href="assets/css/style-1.css">
 </head>
 
 <body>
     <div class="content">
-        <u>
-            <h1>A Tale of Two Cities</h1>
-        </u>
-
+        <h1>A Tale of Two Cities</h1>
         <p>It was the best of times, it was the worst of times, it was the age of wisdom, it was the age of
             foolishness, it was the
             epoch of belief, it was the epoch of incredulity, it was the season of Light, it was the season of
             Darkness,
             it was the
             spring of hope, it was the winter of despair.</p>
-
         <p>We had everything before us, we had nothing before us, we were all going direct to Heaven, we were
             all
             going
@@ -32,9 +28,7 @@
             authorities
             insisted on
             its being received, for good or for evil, in the superlative degree of comparison only.</p>
-
         <h2>Small Heading</h2>
-
         <p>There were a king with a large jaw and a queen with a plain face, on the throne of England; there
             were a
             king with a
@@ -42,9 +36,7 @@
             than
             crystal to the
             lords of the State preserves of loaves and fishes, that things in general were settled for ever.</p>
-
         <h2>Small Heading</h2>
-
         <p>All these things, and a thousand like them, came to pass in and close upon the dear old year one
             thousand
             seven hundred
@@ -56,9 +48,7 @@
             with
             a high
             hand.</p>
-
         <h3>Smaller Heading</h3>
-
         <p>A wonderful fact to reflect upon, that every human creature is constituted to be that profound secret
             and
             mystery to
@@ -71,12 +61,9 @@
             hundreds of thousands of breasts there, is, in some of its imaginings, a secret to the heart nearest
             it!
         </p>
-
         <p>by <i>Charles Dickens</i>, published by <b>Chapman & Hall</b> in 1859.</p>
-
         <p><a href="../index.html">Back to Home page</a></p>
     </div>
-
 </body>
 
 </html>
