--- a/exercises/page-3.html
+++ b/exercises/page-3.html
@@ -8,23 +8,18 @@
     <title>When Doves Cry</title>
     <meta name="description"
         content="A basic web page containing some text from Wikipedia about the 1983-recorded song Purple Rain by Prince">
-    <link rel="stylesheet" href="./assets/css/style-3.css">
+    <link rel="stylesheet" href="assets/css/style-3.css">
 </head>
 
 <body>
 
     <div class="content">
-
-        <u>
-            <h1>Purple Rain</h1>
-        </u>
-
+        <h1>Purple Rain</h1>
         <h2>Introduction</h2>
         <p><i>Purple Rain</i> is a song by American musician Prince and his backing band The Revolution. It is
             the title track
             from the 1984 album of the same name, which in turn is the soundtrack album for the 1984 film of the
             same name.</p>
-
         <h2>Origins</h2>
         <p>Originally written as a country song and intended to be a collaboration with Stevie Nicks, Prince
             explained the
@@ -33,14 +28,12 @@
                 the end of the world and being with the one you love and letting your faith/god guide you
                 through the purple
                 rain."</i></p>
-
         <h2>Recording</h2>
         <p>The song was recorded during a benefit concert for the Minnesota Dance Theatre at the First
             Avenue nightclub
             in Minneapolis on August 3, 1983. <i>City Pages</i> described the 70-minute performance as
             Prince's
             "sweatiest and most soulful hometown concert yet."</p>
-
         <h2>Reception and legacy</h2>
         <p>The song ranked number 144 on the Rolling Stone list of the 500 Greatest Songs of All Time. Q
             magazine placed
@@ -48,11 +41,9 @@
             best song of the
             1980s. The song is also included in The Rock and Roll Hall of Fame's 500 Songs that Shaped
             Rock and Roll.</p>
-
         <p><b>Source</b>: <i>Wikipedia</i>.</p>
         <p><a href="../index.html">Back to Home page</a></p>
     </div>
-
 </body>
 
 </html>
