--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>dplproductions | Home Page</title>
     <meta name="description"
         content="web design and development and run a online gaming comunity casual and competitive gameplay for mobile games if there a community for it we offer a platform to build it up.">
-    <link rel="stylesheet" href="./assets/css/global-1.css">
+    <link rel="stylesheet" href="assets/css/global.css">
 
 </head>
 
@@ -23,10 +23,10 @@
 
         <h3>Online Mobile Gaming</h3>
 
-        <p><a href="./exercises/page-1.html">A Tale of Two Cities</a></p>
-        <p><a href="./exercises/page-2.html">IBAT Chocolates</a></p>
-        <p><a href="./exercises/page-3.html">Prince & Purple Rain</a></p>
-        <p><a href="./exercises/page-4.html">Lorem Ipsum Text</a></p>
+        <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
+        <p><a href="exercises/page-2.html">IBAT Chocolates</a></p>
+        <p><a href="exercises/page-3.html">Prince & Purple Rain</a></p>
+        <p><a href="exercises/page-4.html">Lorem Ipsum Text</a></p>
 
     </div>
 
