--- a/exercises/page-3.html
+++ b/exercises/page-3.html
@@ -37,7 +37,8 @@
         Avenue nightclub
         in Minneapolis on August 3, 1983. <i>City Pages</i> described the 70-minute performance as
         Prince's
-        "sweatiest and most soulful hometown concert yet."</p>
+        <i>"sweatiest and most soulful hometown concert yet."</i>
+    </p>
 
     <h2>Reception and legacy</h2>
 
