--- a/index.html
+++ b/index.html
@@ -13,13 +13,20 @@
 </head>
 
 <body>
+
     <h1>DPLproductions</h1>
+
     <h2>Web Development and Designs</h2>
+
     <h3>Online Mobile Gaming</h3>
+
     <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
     <p><a href="exercises/page-2.html">IBAT Chocolates</a></p>
     <p><a href="exercises/page-3.html">Prince & Purple Rain</a></p>
     <p><a href="exercises/page-4.html">Lorem Ipsum Text</a></p>
+
+    <!-- Final Version -->
+
 </body>
 
 </html>
