--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <p><a href="exercises/page-4.html">Lorem Ipsum Text</a></p>
 
     <!-- Final Version -->
+    <p>Web design by DPL Productions</p>
+    <img src="exercises/assets/img/logo1.jpg" alt="web developer logo">
 
 </body>
 
