--- a/exercises/page-3.html
+++ b/exercises/page-3.html
@@ -49,6 +49,9 @@
     <p><b>Source</b>: <i>Wikipedia</i>.</p>
     <p><a href="../index.html">Back to Home page</a></p>
 
+    <p>Web design by DPL Productions</p>
+    <img src="assets/img/logo1.jpg" alt="web developer logo">
+
 </body>
 
 </html>
