--- a/exercises/page-1.html
+++ b/exercises/page-1.html
@@ -67,6 +67,9 @@
     <p>by <i>Charles Dickens</i>, published by <b>Chapman & Hall</b> in 1859.</p>
     <p><a href="../index.html">Back to Home page</a></p>
 
+    <p>Web design by DPL Productions</p>
+    <img src="assets/img/logo1.jpg" alt="web developer logo">
+
 </body>
 
 </html>
