--- a/exercises/page-2.html
+++ b/exercises/page-2.html
@@ -36,6 +36,9 @@
     <p><b>Ingredients</b>: <i>Cocoa beans and organic sugar</i>.</p>
     <p><a href="../index.html">Back to Home page</a></p>
 
+    <p>Web design by DPL Productions</p>
+    <img src="assets/img/logo1.jpg" alt="web developer logo">
+
 </body>
 
 </html>
