--- a/exercises/page-4.html
+++ b/exercises/page-4.html
@@ -43,6 +43,9 @@
             a typeface without relying on meaningful content</i>.</p>
     <p><a href="../index.html">Back to Home page</a></p>
 
+    <p>Web design by DPL Productions</p>
+    <img src="assets/img/logo1.jpg" alt="web developer logo">
+
 </body>
 
 </html>
