--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>dplproductions | Home Page</title>
     <meta name="description"
         content="web design and development and run a online gaming comunity casual and competitive gameplay for mobile games if there a community for it we offer a platform to build it up.">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img//favicon-16x16.png">
+    <link rel="manifest" href="assets/img/site.webmanifest">
     <link rel="stylesheet" href="assets/css/global.css">
 
 </head>
@@ -24,11 +28,14 @@
     <p><a href="exercises/page-2.html">IBAT Chocolates</a></p>
     <p><a href="exercises/page-3.html">Prince & Purple Rain</a></p>
     <p><a href="exercises/page-4.html">Lorem Ipsum Text</a></p>
-
+    <p><a href="exercises/page-5.html">Vincent van Gogh</a></p>
+    <p><a href="exercises/page-6.html">Irish Tourism</a></p>
+    <p><a href="exercises/page-7.html">Smoothies</a></p>
+    <p><a href="exercises/page-8.html">Software Analytics</a></p>
+    <img src="assets/img/bat.jpg" alt="bat">
     <!-- Final Version -->
     <p>Web design by DPL Productions</p>
-    <img src="exercises/assets/img/logo1.jpg" alt="web developer logo">
-
+    <img src="assets/img/logo1.jpg" alt="web developer logo">
 </body>
 
 </html>
