--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="description"
         content="web design and development and run a online gaming comunity casual and competitive gameplay for mobile games if there a community for it we offer a platform to build it up.">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img//favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img//favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="manifest" href="assets/img/site.webmanifest">
     <link rel="stylesheet" href="assets/css/global.css">
 
@@ -32,6 +32,9 @@
     <p><a href="exercises/page-6.html">Irish Tourism</a></p>
     <p><a href="exercises/page-7.html">Smoothies</a></p>
     <p><a href="exercises/page-8.html">Software Analytics</a></p>
+    <p><a href="exercises/page-9.html">The Box Model</a></p>
+    <p><a href="exercises/page-10.html">Web Page With Panels</a></p>
+    <p><a href="exercises/hero-text.html">Hero block with animated text</a></p>
     <img src="assets/img/bat.jpg" alt="bat">
     <!-- Final Version -->
     <p>Web design by DPL Productions</p>
