--- a/exercises/hero-text.html
+++ b/exercises/hero-text.html
@@ -20,7 +20,7 @@
         <div class="change-background-color">Change Me</div>
         <div class="hero-text-container">
             <h1 class="slide-in-top">Albert Camus</h1>
-            <h2 class="slide-in-top">Creative Web Developer</h2>
+            <h2 class="slide-in-left">Creative Web Developer</h2>
         </div>
 
     </header>
