--- a/exercises/hero-text.html
+++ b/exercises/hero-text.html
@@ -17,15 +17,14 @@
 
     <!-- hero block -->
     <header class="hero-block text-center">
-        <div class="change-background-color">Change Me</div>
+
         <div class="hero-text-container">
-            <h1 class="slide-in-top">Albert Camus</h1>
-            <h2 class="slide-in-left">Creative Web Developer</h2>
+            <h1>Albert Camus</h1>
+            <h2>Creative Web Developer</h2>
         </div>
 
     </header>
     <!-- /hero block -->
-    <!-- The element to be animated -->
 
 
 
