--- a/exercises/page-6.html
+++ b/exercises/page-6.html
@@ -19,9 +19,15 @@
     rel="stylesheet">
 </head>
 
-<body>
+<body id="top-of-page">
 
   <h1>Ireland's Top Five Visitor Attractions</h1>
+
+  <p><a href="#guinness">1: Guinness Storehouse, Dublin</a></p>
+  <p><a href="#cliffs-of-moher">2: Cliffs of Moher, Co. Clare</a></p>
+  <p><a href="#dublin-zoo">3: Dublin Zoo</a></p>
+  <p><a href="#aquatic-centre">4: National Aquatic Centre, Dublin</a></p>
+  <p><a href="#kells-tcd">5: Book of Kells Exhibition, Trinity College, Dublin</a></p>
 
   <p><b>Visiting Ireland is like taking a great big breath of fresh air. Our welcoming country boasts Europe's largest
       green space to the longest defined coastal touring route in the world, Ireland is a country brimming with fun and
@@ -34,7 +40,7 @@
       listed below.</b></p>
 
 
-  <h2>Guinness Storehouse, Dublin</h2>
+  <h2 id="guinness">Guinness Storehouse, Dublin</h2>
   <img src="assets/img/guinness-storehouse.jpg" alt="Guinness Storehouse">
   <p>Located at St. James's Gate Brewery, the <a href="https://www.guinness-storehouse.com/en" target="_blank">Guinness
       Storehouse</a> is the home of the Black Stuff, the heart of Dublin and an unforgettable element of any Irish
@@ -47,7 +53,7 @@
   <p>Annual Number of Visitors: <b>1,711,281</b></p>
 
 
-  <h2>Cliffs of Moher, Co. Clare</h2>
+  <h2 id="cliffs-of-moher">Cliffs of Moher, Co. Clare</h2>
   <img src="assets/img/cliffs-of-moher.jpg" alt="Cliffs of moher">
   <p>You simply cannot travel to Ireland without paying a visit to the breathtaking <a
       href="https://www.cliffsofmoher.ie" target="_blank">Cliffs of Moher</a>, situated in County Clare along the Wild
@@ -59,7 +65,7 @@
   <p>Annual Number of Visitors: <b>1,527,000</b></p>
 
 
-  <h2>Dublin Zoo</h2>
+  <h2 id="dublin-zoo">Dublin Zoo</h2>
   <img src="assets/img/dublin-zoo.jpg" alt="Dublin Zoo">
   <p>Established in 1830, <a href="https://www.dublinzoo.ie" target="_blank">Dublin Zoo</a> works in partnership with
     zoos worldwide to make a significant contribution to the conservation of the endangered species on Earth. Located in
@@ -70,7 +76,7 @@
   <p>Annual Number of Visitors: <b>1,264,300</b></p>
 
 
-  <h2>National Aquatic Centre, Dublin</h2>
+  <h2 id="aquatic-centre">National Aquatic Centre, Dublin</h2>
   <img src="assets/img/national-aquatic-centre.jpg" alt="National Aquatic Centre">
   <p>Located in the Dublin suburb of Blanchardstown, Dublin, the <a href="https://www.nationalaquaticcentre.ie"
       target="_blank">National Aquatic Centre</a> is Ireland's largest and most popular Water Park. The 2,500-capacity
@@ -80,7 +86,7 @@
   <p>Annual Number of Visitors: <b>1,099,756</b></p>
 
 
-  <h2>Book of Kells Exhibition, Trinity College, Dublin</h2>
+  <h2 id="kells-tcd">Book of Kells Exhibition, Trinity College, Dublin</h2>
   <img src="assets/img/book-of-kells.jpg" alt="Book of kells">
   <p>Based at Trinity College in the heart of Dublin city, the <a href="https://www.tcd.ie/visitors/book-of-kells/"
       target="_blank">Book of Kells Exhibition</a> is a must-see on the itinerary of all visitors to Ireland. It
@@ -90,6 +96,7 @@
     oldest books.</p>
   <p>Annual Number of Visitors: <b>983,410</b></p>
 
+  <p><a href="#top-of-page">Return to top of page</a></p>
   <p><a href="../index.html">Back to Home page</a></p>
 
 </body>
