--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>dplproductions | Home Page</title>
+    <title>DPL Productions | Home Page</title>
     <meta name="description"
         content="web design and development and run a online gaming comunity casual and competitive gameplay for mobile games if there a community for it we offer a platform to build it up.">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
@@ -17,10 +17,23 @@
 </head>
 
 <body>
+    <!-- hero block -->
+    <header class="hero-block text-center">
+        <div class="change-background-color">Change Me</div>
+        <div class="hero-text-container">
+            <h1 class="slide-in-top">DPL Productions</h1>
+            <h2 class="slide-in-left">Web Development and Designs</h2>
+        </div>
 
-    <h1>DPLproductions</h1>
+        <div class="hero-bg-media">
+            <img src="assets/img/web-design.jpg" alt="web design">
+        </div>
 
-    <h2>Web Development and Designs</h2>
+        <div class="bg-overlay"></div>
+
+    </header>
+    <!-- /hero block -->
+    <!-- The element to be animated -->
 
     <h3>Online Mobile Gaming</h3>
 
@@ -34,11 +47,18 @@
     <p><a href="exercises/page-8.html">Software Analytics</a></p>
     <p><a href="exercises/page-9.html">The Box Model</a></p>
     <p><a href="exercises/page-10.html">Web Page With Panels</a></p>
+    <p><a href="exercises/page-11.html">Web Page with Pastel Sections</a></p>
+    <p><a href="exercises/page-12.html">Web Page with Dark Sections</a></p>
+    <p><a href="exercises/page-13.html">Web Page with Alternating Sections</a></p>
+    <p><a href="exercises/page-14.html">Responsive grid of rows and columns</a></p>
+    <p><a href="exercises/hero-text.html">Hero block with animated text</a></p>
     <p><a href="exercises/hero-image.html">Hero block with background image</a></p>
-    <img src="assets/img/bat.jpg" alt="bat">
+    <p><a href="exercises/hero-image.html">Hero block with background video</a></p>
+    <p><a href="exercises/buttons-icons.html">Buttons and Icons</a></p>
+
     <!-- Final Version -->
-    <p>Web design by DPL Productions</p>
-    <img src="assets/img/logo1.jpg" alt="web developer logo">
+    <p>Web design by DPL Productions &copy</p>
+    <img src="assets/img/logo.png" alt="web developer logo">
 </body>
 
 </html>
