--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
     <link rel="manifest" href="assets/img/site.webmanifest">
+    <link rel="preload" href="/assets/img/web-design.jpg" as="image">
     <link rel="stylesheet" href="assets/css/global.css">
 
 </head>
