--- a/exercises/hero-image.html
+++ b/exercises/hero-image.html
@@ -33,7 +33,11 @@
     <!-- /hero block -->
     <!-- The element to be animated -->
 
+    <p><a href="#top-of-page">Return to top of page</a></p>
+    <p><a href="../index.html">Back to Home page</a></p>
 
+    <p>Web design by DPL Productions &copy</p>
+    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
 
 </body>
 
