--- a/exercises/page-10.html
+++ b/exercises/page-10.html
@@ -30,33 +30,45 @@
     <h2>An innovative institution delivering world-class student experiences since 1975.</h2>
 
     <h3>Mission Statement</h3>
+
     <p>The Mission of Tabi University is to provide a nurturing environment and innovative curriculum that will inspire
         students to become competent professionals with the ability to think critically and improve the quality of life
         for individuals and society.</p>
 
     <div class="important-note-box box-style-1">
         <h3>Important Note</h3>
+
         <p>The text on this page contains important information for intending students and for other parties to their
             grant applications. This document will be updated to reflect any changes in legislation.</p>
     </div>
 
     <div class="important-note-box box-style-2">
         <h3>Important Note</h3>
+
         <p>The text on this page contains important information for intending students and for other parties to their
             grant applications. This document will be updated to reflect any changes in legislation.</p>
     </div>
 
     <div class="important-note-box box-style-3">
         <h3>Important Note</h3>
+
         <p>The text on this page contains important information for intending students and for other parties to their
             grant applications. This document will be updated to reflect any changes in legislation.</p>
     </div>
 
     <div class="important-note-box box-style-4">
         <h3>Important Note</h3>
+
         <p>The text on this page contains important information for intending students and for other parties to their
             grant applications. This document will be updated to reflect any changes in legislation.</p>
     </div>
+
+    <p><a href="#top-of-page">Return to top of page</a></p>
+    <p><a href="../index.html">Back to Home page</a></p>
+
+    <p>Web design by DPL Productions &copy</p>
+    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
+
 </body>
 
 </html>
