--- a/exercises/page-11.html
+++ b/exercises/page-11.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+
     <main>
         <article>
 
@@ -41,6 +42,7 @@
 
             <section class="section-narrow bg-pastel-1">
                 <h1>Section Heading One</h1>
+
                 <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
                     dolorum. Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur,
                     delectus labore asperiores enim nobis.</p>
@@ -52,6 +54,7 @@
 
             <section class="section-narrow bg-pastel-2">
                 <h1>Section Heading Two</h1>
+
                 <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
                     dolorum. Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur,
                     delectus labore asperiores enim nobis.</p>
@@ -63,6 +66,7 @@
 
             <section class="section-narrow bg-pastel-1">
                 <h1>Section Heading Three</h1>
+
                 <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
                     dolorum. Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur,
                     delectus labore asperiores enim nobis.</p>
@@ -74,6 +78,7 @@
 
             <section class="section-narrow bg-pastel-2">
                 <h1>Section Heading Four</h1>
+
                 <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
                     dolorum. Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur,
                     delectus labore asperiores enim nobis.</p>
@@ -85,6 +90,12 @@
 
         </article>
     </main>
+
+    <p><a href="#top-of-page">Return to top of page</a></p>
+    <p><a href="../index.html">Back to Home page</a></p>
+
+    <p>Web design by DPL Productions &copy</p>
+    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
 
 </body>
 
