--- a/exercises/page-14.html
+++ b/exercises/page-14.html
@@ -28,6 +28,7 @@
 
                     <div class="bono">
                         <h3>Bono</h3>
+
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius corporis obcaecati perferendis
                             fuga quidem ad
                             alias debitis excepturi ipsa laudantium sapiente.</p>
@@ -35,6 +36,7 @@
 
                     <div class="edge">
                         <h3>Edge</h3>
+
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius corporis obcaecati perferendis
                             fuga quidem ad
                             alias debitis excepturi ipsa laudantium sapiente.</p>
@@ -42,6 +44,7 @@
 
                     <div class="adam">
                         <h3>Adam</h3>
+
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius corporis obcaecati perferendis
                             fuga quidem ad
                             alias debitis excepturi ipsa laudantium sapiente.</p>
@@ -49,6 +52,7 @@
 
                     <div class="larry">
                         <h3>Larry</h3>
+
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius corporis obcaecati perferendis
                             fuga quidem ad
                             alias debitis excepturi ipsa laudantium sapiente.</p>
@@ -56,6 +60,7 @@
 
                     <div class="bono">
                         <h3>Bono</h3>
+
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius corporis obcaecati perferendis
                             fuga quidem ad
                             alias debitis excepturi ipsa laudantium sapiente.</p>
@@ -63,6 +68,7 @@
 
                     <div class="edge">
                         <h3>Edge</h3>
+
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius corporis obcaecati perferendis
                             fuga quidem ad
                             alias debitis excepturi ipsa laudantium sapiente.</p>
@@ -70,6 +76,7 @@
 
                     <div class="adam">
                         <h3>Adam</h3>
+
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius corporis obcaecati perferendis
                             fuga quidem ad
                             alias debitis excepturi ipsa laudantium sapiente.</p>
@@ -77,6 +84,7 @@
 
                     <div class="larry">
                         <h3>Larry</h3>
+
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius corporis obcaecati perferendis
                             fuga quidem ad
                             alias debitis excepturi ipsa laudantium sapiente.</p>
@@ -88,6 +96,12 @@
 
         </article>
     </main>
+
+    <p><a href="#top-of-page">Return to top of page</a></p>
+    <p><a href="../index.html">Back to Home page</a></p>
+
+    <p>Web design by DPL Productions &copy</p>
+    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
 
 </body>
 
