--- a/exercises/page-2.html
+++ b/exercises/page-2.html
@@ -18,6 +18,7 @@
     <h2>We transform ethically-sourced organically-grown, high-quality cocoa beans into delicious chocolate.</h2>
 
     <h3>O’Payo</h3>
+
     <p>Ethically-sourced cocoa beans supplied by Ingemann Fine Cocoa. Based in Tipitapa, Nicaragua, Ingemann
         currently receives
         wet beans from 450 small holders. These farmers receive a premium of 25% on their wet beans
@@ -26,6 +27,7 @@
     <p><b>Ingredients</b>: <i>Organic cocoa beans and organic sugar</i>.</p>
 
     <h3>Nahua</h3>
+
     <p>Nahua is Costa Rica's leading fine flavour cocoa producer with a social mission committed to
         improving the lives of the
         local smallholder farmers. Like our other cocoa bean suppliers, Nuhua collects wet beans at the farm
@@ -34,10 +36,12 @@
         and ensures the cocoa
         beans are fermented and dried to an exacting standard.</p>
     <p><b>Ingredients</b>: <i>Cocoa beans and organic sugar</i>.</p>
+
+    <p><a href="#top-of-page">Return to top of page</a></p>
     <p><a href="../index.html">Back to Home page</a></p>
 
-    <p>Web design by DPL Productions</p>
-    <img src="assets/img/logo1.jpg" alt="web developer logo">
+    <p>Web design by DPL Productions &copy</p>
+    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
 
 </body>
 
