--- a/exercises/page-5.html
+++ b/exercises/page-5.html
@@ -27,6 +27,7 @@
         and are characterised by bold colours and dramatic, impulsive and expressive brushwork.</h2>
 
     <h3>The Arles Years</h3>
+
     <p>Van Gogh's two years at Arles in France (1888–89) were one of his most artistically productive periods. He was
         enchanted by the local countryside and light; his works from this period are rich in yellow, ultramarine and
         mauve. Among the most well-known works of that time is an oil painting of his rented room, entitled <i>Bedroom
@@ -66,7 +67,12 @@
 
 
     <p><b>Source</b>: <i>All text and images from Wikipedia</i>.</p>
+
+    <p><a href="#top-of-page">Return to top of page</a></p>
     <p><a href="../index.html">Back to Home page</a></p>
+
+    <p>Web design by DPL Productions &copy</p>
+    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
 
 </body>
 
