--- a/exercises/page-9.html
+++ b/exercises/page-9.html
@@ -44,6 +44,13 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius corporis obcaecati perferendis fuga quidem ad
             alias debitis excepturi ipsa laudantium sapiente.</p>
     </div>
+
+    <p><a href="#top-of-page">Return to top of page</a></p>
+    <p><a href="../index.html">Back to Home page</a></p>
+
+    <p>Web design by DPL Productions &copy</p>
+    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
+
 </body>
 
 </html>
