--- a/exercises/buttons-icons.html
+++ b/exercises/buttons-icons.html
@@ -20,11 +20,13 @@
 </head>
 
 <body>
+
     <main>
         <article>
 
             <header class="header-narrow text-center bg-header">
                 <h1>About Us</h1>
+
                 <img src="assets/img/three-staff.png" alt="staff members">
                 <h2>We are an award-winning web, mobile and digital design agency. We can bring your ideas to life
                     online, and transform visionary products and services into successful ones.</h2>
@@ -32,6 +34,7 @@
 
             <section class="section-narrow bg-blue-dark">
                 <h1>Section Heading One</h1>
+
                 <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
                     dolorum. Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur,
                     delectus labore asperiores enim nobis.</p>
@@ -48,6 +51,7 @@
 
             <section class="section-narrow bg-blue-light">
                 <h1>Section Heading Two</h1>
+
                 <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
                     dolorum. Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur,
                     delectus labore asperiores enim nobis.</p>
@@ -59,6 +63,7 @@
 
             <section class="section-narrow bg-blue-dark">
                 <h1>Section Heading Three</h1>
+
                 <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
                     dolorum. Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur,
                     delectus labore asperiores enim nobis.</p>
@@ -70,6 +75,7 @@
 
             <section class="section-narrow bg-blue-light">
                 <h1>Section Heading Four</h1>
+
                 <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
                     dolorum. Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur,
                     delectus labore asperiores enim nobis.</p>
@@ -81,6 +87,12 @@
 
         </article>
     </main>
+
+    <p><a href="#top-of-page">Return to top of page</a></p>
+    <p><a href="../index.html">Back to Home page</a></p>
+
+    <p>Web design by DPL Productions &copy</p>
+    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
 
 </body>
 
