--- a/exercises/hero-text.html
+++ b/exercises/hero-text.html
@@ -26,7 +26,11 @@
     </header>
     <!-- /hero block -->
 
+    <p><a href="#top-of-page">Return to top of page</a></p>
+    <p><a href="../index.html">Back to Home page</a></p>
 
+    <p>Web design by DPL Productions &copy</p>
+    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
 
 </body>
 
