--- a/exercises/page-1.html
+++ b/exercises/page-1.html
@@ -14,6 +14,7 @@
 <body>
 
     <h1>A Tale of Two Cities</h1>
+
     <p>It was the best of times, it was the worst of times, it was the age of wisdom, it was the age of
         foolishness, it was the
         epoch of belief, it was the epoch of incredulity, it was the season of Light, it was the season of
@@ -30,6 +31,7 @@
         its being received, for good or for evil, in the superlative degree of comparison only.</p>
 
     <h2>Small Heading</h2>
+
     <p>There were a king with a large jaw and a queen with a plain face, on the throne of England; there
         were a
         king with a
@@ -39,6 +41,7 @@
         lords of the State preserves of loaves and fishes, that things in general were settled for ever.</p>
 
     <h2>Small Heading</h2>
+
     <p>All these things, and a thousand like them, came to pass in and close upon the dear old year one
         thousand
         seven hundred
@@ -52,6 +55,7 @@
         hand.</p>
 
     <h3>Smaller Heading</h3>
+
     <p>A wonderful fact to reflect upon, that every human creature is constituted to be that profound secret
         and
         mystery to
@@ -65,10 +69,12 @@
         it!
     </p>
     <p>by <i>Charles Dickens</i>, published by <b>Chapman & Hall</b> in 1859.</p>
+
+    <p><a href="#top-of-page">Return to top of page</a></p>
     <p><a href="../index.html">Back to Home page</a></p>
 
-    <p>Web design by DPL Productions</p>
-    <img src="assets/img/logo1.jpg" alt="web developer logo">
+    <p>Web design by DPL Productions &copy</p>
+    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
 
 </body>
 
