--- a/exercises/page-12.html
+++ b/exercises/page-12.html
@@ -30,11 +30,13 @@
 </head>
 
 <body>
+
     <main>
         <article>
 
             <header class="header-narrow text-center bg-header">
                 <h1>About Us</h1>
+
                 <img src="assets/img/three-staff.png" alt="staff members">
                 <h2>We are an award-winning web, mobile and digital design agency. We can bring your ideas to life
                     online, and
@@ -43,6 +45,7 @@
 
             <section class="section-narrow bg-dark-1">
                 <h1>Section Heading One</h1>
+
                 <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
                     dolorum.
                     Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur, delectus
@@ -58,6 +61,7 @@
 
             <section class="section-narrow bg-dark-2">
                 <h1>Section Heading Two</h1>
+
                 <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
                     dolorum.
                     Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur, delectus
@@ -73,6 +77,7 @@
 
             <section class="section-narrow bg-dark-1">
                 <h1>Section Heading Three</h1>
+
                 <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
                     dolorum.
                     Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur, delectus
@@ -88,6 +93,7 @@
 
             <section class="section-narrow bg-dark-2">
                 <h1>Section Heading Four</h1>
+
                 <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
                     dolorum.
                     Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur, delectus
@@ -103,6 +109,12 @@
 
         </article>
     </main>
+
+    <p><a href="#top-of-page">Return to top of page</a></p>
+    <p><a href="../index.html">Back to Home page</a></p>
+
+    <p>Web design by DPL Productions &copy</p>
+    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
 
 </body>
 
