--- a/exercises/page-3.html
+++ b/exercises/page-3.html
@@ -16,12 +16,14 @@
     <h1>Purple Rain</h1>
 
     <h2>Introduction</h2>
+
     <p><i>Purple Rain</i> is a song by American musician Prince and his backing band The Revolution. It is
         the title track
         from the 1984 album of the same name, which in turn is the soundtrack album for the 1984 film of the
         same name.</p>
 
     <h2>Origins</h2>
+
     <p>Originally written as a country song and intended to be a collaboration with Stevie Nicks, Prince
         explained the
         meaning of the song as follows: <i>"When there's blood in the sky... red and blue = purple. Purple
@@ -31,6 +33,7 @@
             rain."</i></p>
 
     <h2>Recording</h2>
+
     <p>The song was recorded during a benefit concert for the Minnesota Dance Theatre at the First
         Avenue nightclub
         in Minneapolis on August 3, 1983. <i>City Pages</i> described the 70-minute performance as
@@ -39,6 +42,7 @@
     </p>
 
     <h2>Reception and legacy</h2>
+
     <p>The song ranked number 144 on the Rolling Stone list of the 500 Greatest Songs of All Time. Q
         magazine placed
         it at number 40 in its list of the 100 Greatest Guitar Tracks, and Pitchfork named it the
@@ -47,10 +51,12 @@
         Rock and Roll.</p>
 
     <p><b>Source</b>: <i>Wikipedia</i>.</p>
+
+    <p><a href="#top-of-page">Return to top of page</a></p>
     <p><a href="../index.html">Back to Home page</a></p>
 
-    <p>Web design by DPL Productions</p>
-    <img src="assets/img/logo1.jpg" alt="web developer logo">
+    <p>Web design by DPL Productions &copy</p>
+    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
 
 </body>
 
