--- a/exercises/page-4.html
+++ b/exercises/page-4.html
@@ -15,36 +15,43 @@
     <h1>Lorem Ipsum Text</h1>
 
     <h2>Introduction</h2>
+
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate perspiciatis ipsum sint incidunt
         cum nemo dolore illo, et pariatur quae expedita ratione quaerat? Sint nobis ducimus ad? Dolor, nam
         repellat?</p>
 
     <h2>Sub-heading</h2>
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi eaque harum, voluptatem perspiciatis
         amet ut, minima, iusto aliquid repudiandae quis tempore corrupti nam similique. Voluptatem ratione
         consequuntur tenetur facere eveniet?</p>
 
     <h2>Sub-heading</h2>
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cum veniam illum tempora nesciunt
         voluptate id? Nisi facere rerum veniam illo, ipsa laborum saepe voluptatem aperiam? Commodi quos
         omnis placeat.</p>
 
     <h3>Smaller Sub-heading</h3>
+
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus cumque pariatur modi accusantium
         ullam alias nostrum voluptatem. Voluptas possimus accusamus modi, minus dolorum autem magnam,
         debitis, voluptatum provident amet consequuntur?</p>
 
     <h2>Sub-heading</h2>
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, aliquid? Dolorem distinctio,
         repudiandae iusto esse inventore voluptatum illo quisquam doloribus enim voluptates explicabo rem at
         voluptatem illum, tempore quis doloremque!</p>
     <p><b>Text Source</b>: <i>Lorem Ipsum, a placeholder text commonly used to demonstrate the visual form
             of a document or
             a typeface without relying on meaningful content</i>.</p>
+
+    <p><a href="#top-of-page">Return to top of page</a></p>
     <p><a href="../index.html">Back to Home page</a></p>
 
-    <p>Web design by DPL Productions</p>
-    <img src="assets/img/logo1.jpg" alt="web developer logo">
+    <p>Web design by DPL Productions &copy</p>
+    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
 
 </body>
 
