--- a/exercises/page-6.html
+++ b/exercises/page-6.html
@@ -41,6 +41,7 @@
 
 
   <h2 id="guinness">Guinness Storehouse, Dublin</h2>
+
   <img src="assets/img/guinness-storehouse.jpg" alt="Guinness Storehouse">
   <p>Located at St. James's Gate Brewery, the <a href="https://www.guinness-storehouse.com/en" target="_blank">Guinness
       Storehouse</a> is the home of the Black Stuff, the heart of Dublin and an unforgettable element of any Irish
@@ -54,6 +55,7 @@
 
 
   <h2 id="cliffs-of-moher">Cliffs of Moher, Co. Clare</h2>
+
   <img src="assets/img/cliffs-of-moher.jpg" alt="Cliffs of moher">
   <p>You simply cannot travel to Ireland without paying a visit to the breathtaking <a
       href="https://www.cliffsofmoher.ie" target="_blank">Cliffs of Moher</a>, situated in County Clare along the Wild
@@ -66,6 +68,7 @@
 
 
   <h2 id="dublin-zoo">Dublin Zoo</h2>
+
   <img src="assets/img/dublin-zoo.jpg" alt="Dublin Zoo">
   <p>Established in 1830, <a href="https://www.dublinzoo.ie" target="_blank">Dublin Zoo</a> works in partnership with
     zoos worldwide to make a significant contribution to the conservation of the endangered species on Earth. Located in
@@ -77,6 +80,7 @@
 
 
   <h2 id="aquatic-centre">National Aquatic Centre, Dublin</h2>
+
   <img src="assets/img/national-aquatic-centre.jpg" alt="National Aquatic Centre">
   <p>Located in the Dublin suburb of Blanchardstown, Dublin, the <a href="https://www.nationalaquaticcentre.ie"
       target="_blank">National Aquatic Centre</a> is Ireland's largest and most popular Water Park. The 2,500-capacity
@@ -87,6 +91,7 @@
 
 
   <h2 id="kells-tcd">Book of Kells Exhibition, Trinity College, Dublin</h2>
+
   <img src="assets/img/book-of-kells.jpg" alt="Book of kells">
   <p>Based at Trinity College in the heart of Dublin city, the <a href="https://www.tcd.ie/visitors/book-of-kells/"
       target="_blank">Book of Kells Exhibition</a> is a must-see on the itinerary of all visitors to Ireland. It
@@ -98,6 +103,9 @@
 
   <p><a href="#top-of-page">Return to top of page</a></p>
   <p><a href="../index.html">Back to Home page</a></p>
+
+  <p>Web design by DPL Productions &copy</p>
+  <img src="/exercises/assets/img/logo.png" alt="web developer logo">
 
 </body>
 
