--- a/exercises/page-8.html
+++ b/exercises/page-8.html
@@ -20,25 +20,36 @@
 
 
 <body>
+
     <img src="assets/img/visual-data.png" alt="IBAT Analytics product">
+
     <h1>Digital Product Innovation for Visionary Brands</h1>
 
     <h2>IBAT Analytics helps you boost your business impact.</h2>
 
     <h3>What we offer</h3>
+
     <p>Say 'Hello' to a simple yet powerful user analytics system. IBAT Analytics tells you all you need to know about
         your website traffic, without tracking or storing your visitors' personal information.</p>
     <img src="assets/img/programmer.png" alt="What we offer">
 
     <h3>How you benefit</h3>
+
     <p>IBAT Analytics helps you focus on what's important: your business.</p>
     <img src="assets/img/business.png" alt="How you benefit">
 
     <h3>Happy users</h3>
+
     <p>Join the 1,000s of delighted customers from every sector of business around the world who are using IBAT
         Analytics to drive their future success.</p>
     <img src="assets/img/happy-users.png" alt="Happy Users">
+
+    <p><a href="#top-of-page">Return to top of page</a></p>
     <p><a href="../index.html">Back to Home page</a></p>
+
+    <p>Web design by DPL Productions &copy</p>
+    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
+
 </body>
 
 </html>
