--- a/exercises/hero-text.html
+++ b/exercises/hero-text.html
@@ -19,8 +19,8 @@
     <header class="hero-block text-center">
 
         <div class="hero-text-container">
-            <h1>Albert Camus</h1>
-            <h2>Creative Web Developer</h2>
+            <h1 class="slide-in-top">Albert Camus</h1>
+            <h2 class="slide-in-left">Creative Web Developer</h2>
         </div>
 
     </header>
@@ -30,7 +30,7 @@
     <p><a href="../index.html">Back to Home page</a></p>
 
     <p>Web design by DPL Productions &copy</p>
-    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
+    <img src="../exercises/assets/img/logo.png" alt="web developer logo">
 
 </body>
 
