--- a/exercises/hero-video.html
+++ b/exercises/hero-video.html
@@ -43,7 +43,7 @@
     <p><a href="../index.html">Back to Home page</a></p>
 
     <p>Web design by DPL Productions &copy</p>
-    <img src="/exercises/assets/img/logo.png" alt="web developer logo">
+    <img src="../exercises/assets/img/logo.png" alt="web developer logo">
 
 </body>
 
