--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <p><a href="exercises/hero-image.html">Hero block with background image</a></p>
     <p><a href="exercises/hero-video.html">Hero block with background video</a></p>
     <p><a href="exercises/buttons-icons.html">Buttons and Icons</a></p>
-
+    <p><a href="portfolio/van-gogh/index.html">Vincent van Gogh project</a></p>
     <!-- Final Version -->
     <p>Web design by DPL Productions &copy</p>
     <img src="assets/img/logo.png" alt="web developer logo">
