--- a/portfolio/smoothies/index.html
+++ b/portfolio/smoothies/index.html
@@ -19,6 +19,23 @@
 
 <body>
 
+    <!-- hero block -->
+
+    <header class="hero-block text-center">
+
+        <div class="hero-text-container">
+            <h1 class="slide-in-top">Smooth Smoothies</h1>
+            <h2 class="slide-in-top">Where flavour meets goodness</h2>
+        </div>
+
+        <div class="hero-bg-media">
+            <img src="assets/img/smoothie-hero-image.jpg" alt="sample background image">
+        </div>
+
+        <div class="bg-overlay"></div>
+
+    </header>
+    <!-- </hero block>-->
 
     <main>
         <article>
