--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     <p><a href="exercises/hero-video.html">Hero block with background video</a></p>
     <p><a href="exercises/buttons-icons.html">Buttons and Icons</a></p>
     <p><a href="portfolio/van-gogh/index.html">Vincent van Gogh project</a></p>
+    <p><a href="portfolio/smoothies/index.html">Smoothies Project</a></p>
+    <p><a href="portfolio/travel/index.html">IBAT Tours</a></p>
     <!-- Final Version -->
     <p>Web design by DPL Productions &copy</p>
     <img src="assets/img/logo.png" alt="web developer logo">
