--- a/exercises/forms.html
+++ b/exercises/forms.html
@@ -32,18 +32,34 @@
 
             <header class="header-narrow text-center bg-header">
                 <h1>About Us</h1>
-
                 <img src="assets/img/three-staff.png" alt="staff members">
                 <h2>We are an award-winning web, mobile and digital design agency. We can bring your ideas to life
-                    online, and transform visionary products and services into successful ones.</h2>
+                    online, and
+                    transform visionary products and services into successful ones.</h2>
             </header>
 
             <section class="section-narrow bg-blue-dark">
                 <h1>Section Heading One</h1>
-
                 <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
-                    dolorum. Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur,
-                    delectus labore asperiores enim nobis.</p>
+                    dolorum.
+                    Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur, delectus
+                    labore
+                    asperiores enim nobis.</p>
+
+                <p>In pellentesque, odio suscipit ornare vulputate, est nunc consequat neque, nec faucibus nulla arcu id
+                    ligula.
+                    Proin laoreet cursus vulputate. Curabitur accumsan leo ipsum, et pellentesque velit pretium at.
+                    Etiam
+                    aliquam, ipsum eu tincidunt.</p>
+            </section>
+
+            <section class="section-narrow bg-blue-light">
+                <h1>Section Heading Two</h1>
+                <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
+                    dolorum.
+                    Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur, delectus
+                    labore
+                    asperiores enim nobis.</p>
 
                 <div class="container-btn">
                     <a href="#" class="btn btn-solid btn-rounded"><i class="fas fa-shopping-cart"></i> Order Now</a>
@@ -51,57 +67,97 @@
                 </div>
 
                 <p>In pellentesque, odio suscipit ornare vulputate, est nunc consequat neque, nec faucibus nulla arcu id
-                    ligula. Proin laoreet cursus vulputate. Curabitur accumsan leo ipsum, et pellentesque velit pretium
-                    at. Etiam aliquam, ipsum eu tincidunt.</p>
-            </section>
+                    ligula.
+                    Proin laoreet cursus vulputate. Curabitur accumsan leo ipsum, et pellentesque velit pretium at.
+                    Etiam
+                    aliquam, ipsum eu tincidunt.</p>
 
-            <section class="section-narrow bg-blue-light">
-                <h1>Section Heading Two</h1>
-
-                <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
-                    dolorum. Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur,
-                    delectus labore asperiores enim nobis.</p>
-
-                <p>In pellentesque, odio suscipit ornare vulputate, est nunc consequat neque, nec faucibus nulla arcu id
-                    ligula. Proin laoreet cursus vulputate. Curabitur accumsan leo ipsum, et pellentesque velit pretium
-                    at. Etiam aliquam, ipsum eu tincidunt.</p>
             </section>
 
             <section class="section-narrow bg-blue-dark">
                 <h1>Section Heading Three</h1>
-
                 <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
-                    dolorum. Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur,
-                    delectus labore asperiores enim nobis.</p>
+                    dolorum.
+                    Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur, delectus
+                    labore
+                    asperiores enim nobis.</p>
 
                 <p>In pellentesque, odio suscipit ornare vulputate, est nunc consequat neque, nec faucibus nulla arcu id
-                    ligula. Proin laoreet cursus vulputate. Curabitur accumsan leo ipsum, et pellentesque velit pretium
-                    at. Etiam aliquam, ipsum eu tincidunt.</p>
+                    ligula.
+                    Proin laoreet cursus vulputate. Curabitur accumsan leo ipsum, et pellentesque velit pretium at.
+                    Etiam
+                    aliquam, ipsum eu tincidunt.</p>
             </section>
 
             <section class="section-narrow bg-blue-light">
                 <h1>Section Heading Four</h1>
-
                 <p><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Ea assumenda qui totam nam corrupti
-                    dolorum. Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur,
-                    delectus labore asperiores enim nobis.</p>
+                    dolorum.
+                    Dolores minus doloribus obcaecati cupiditate odit voluptatem recusandae maxime consectetur, delectus
+                    labore
+                    asperiores enim nobis.</p>
 
                 <div class="container-form">
-                    <form action="#" method="POST" id="email-form">
+                    <form action="https://formspree.io/f/mrgoaavw" method="POST" id="email-form">
                         <label for=""></label>
-                        <input type="email" id="email" name="email" placeholder="email address">
-                        <button type="submit" class="btn btn-solid btn-rounded"><i class="fas fa-arrow-right"></i>
-                            Subscribe</button>
+                        <input type="email" id="email" name="email" placeholder="email address" required>
+                        <button id="my-form-button" type="submit" class="btn btn-solid btn-rounded"><i
+                                class="fas fa-arrow-right"></i> Subscribe</button>
+                        <div id="form-status"></div>
                     </form>
                 </div>
 
+
                 <p>In pellentesque, odio suscipit ornare vulputate, est nunc consequat neque, nec faucibus nulla arcu id
-                    ligula. Proin laoreet cursus vulputate. Curabitur accumsan leo ipsum, et pellentesque velit pretium
-                    at. Etiam aliquam, ipsum eu tincidunt.</p>
+                    ligula.
+                    Proin laoreet cursus vulputate. Curabitur accumsan leo ipsum, et pellentesque velit pretium at.
+                    Etiam
+                    aliquam, ipsum eu tincidunt.</p>
             </section>
 
         </article>
     </main>
+
+    <script>
+        var form = document.getElementById("email-form");
+
+        async function handleSubmit(event) {
+            event.preventDefault();
+            const status = document.getElementById("form-status");
+            const data = new FormData(event.target);
+            fetch(event.target.action, {
+                method: form.method,
+                body: data,
+                headers: {
+                    'Accept': 'application/json'
+                }
+            }).then(response => {
+                document.getElementById("form-status").style.display = "block";
+                status.innerHTML = "Thanks for your submission!";
+                form.reset();
+                setTimeout(function () {
+                    const msg = document.getElementById("form-status");
+                    msg.style.transition = '.5s';
+                    msg.style.opacity = '0';
+                    msg.style.visibility = 'hidden';
+                    msg.style.display = 'none';
+                }, 1250);
+
+            }).catch(error => {
+                document.getElementById("form-status").style.display = "block";
+                status.innerHTML = "Oops! There was a problem submitting your form."
+                setTimeout(function () {
+                    const msg = document.getElementById("form-status");
+                    msg.style.transition = '.5s';
+                    msg.style.opacity = '0';
+                    msg.style.visibility = 'hidden';
+                    msg.style.display = 'none';
+                }, 1250);
+            });
+        }
+        form.addEventListener("submit", handleSubmit)
+
+    </script>
 
     <p><a href="#top-of-page">Return to top of page</a></p>
     <p><a href="../index.html">Back to Home page</a></p>
