--- a/exercises/page-2.html
+++ b/exercises/page-2.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/style-2.css">
 </head>
 
-<body>
+<body id="top-of-page">
 
     <h1>IBAT Chocolates</h1>
 
