--- a/exercises/page-4.html
+++ b/exercises/page-4.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/style-4.css">
 </head>
 
-<body>
+<body id="top-of-page">
 
     <h1>Lorem Ipsum Text</h1>
 
