--- a/exercises/page-1.html
+++ b/exercises/page-1.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/style-1.css">
 </head>
 
-<body>
+<body id="top-of-page">
 
     <h1>A Tale of Two Cities</h1>
 
