--- a/exercises/page-3.html
+++ b/exercises/page-3.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/style-3.css">
 </head>
 
-<body>
+<body id="top-of-page">
 
     <h1>Purple Rain</h1>
 
