--- a/portfolio/van-gogh/index.html
+++ b/portfolio/van-gogh/index.html
@@ -18,7 +18,7 @@
 </head>
 
 
-<body>
+<body id="top-of-page">
 
     <h1>Vincent van Gogh</h1>
 
@@ -76,7 +76,7 @@
     <p><b>Source</b>: <i>All text and images from Wikipedia</i>.</p>
 
     <p><a href="#top-of-page">Return to top of page</a></p>
-    <p><a href="../index.html">Back to Home page</a></p>
+    <p><a href="../../index.html">Back to Home page</a></p>
 
     <p>Web design by DPL Productions &copy</p>
     <img src="assets/img/logo.png" alt="web developer logo">
