--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
     <link rel="manifest" href="assets/img/site.webmanifest">
     <link rel="preload" href="/assets/img/web-design.jpg" as="image">
     <link rel="stylesheet" href="assets/css/global.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DWYRELXFTZ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
+        gtag('config', 'G-DWYRELXFTZ');
+    </script>
 </head>
 
 <body>
