--- a/index.html
+++ b/index.html
@@ -17,22 +17,7 @@
     <!-- Cookie message -->
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
-    <script>
-        window.cookieconsent.initialise({
-            "palette": {
-                "popup": {
-                    "background": "#000"
-                },
-                "button": {
-                    "background": "#f1d600"
-                }
-            },
-            "content": {
-                "href": "https://dplproductions.github.io/privacy.html"
-            }
-        });
-    </script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DWYRELXFTZ"></script>
     <script>
@@ -91,6 +76,24 @@
 
     <p>Web design by DPL Productions &copy</p>
     <img src="assets/img/logo.png" alt="web developer logo">
+
+    <!-- cookies -->
+    <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+    <script>
+        window.cookieconsent.initialise({
+            "palette": {
+                "popup": {
+                    "background": "#000"
+                },
+                "button": {
+                    "background": "#f1d600"
+                }
+            },
+            "content": {
+                "href": "https://dplproductions.github.io/privacy.html"
+            }
+        });
+    </script>
 </body>
 
 </html>
